[package]
name = "relibmss"
version = "0.10.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/MssReliab/relibmss"
homepage = "https://github.com/MssReliab/relibmss"
documentation = "https://github.com/MssReliab/relibmss"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
bss = { version = "0.4", package = "relib-bss" }
mss = { version = "0.4", package = "relib-mss" }
