[package]
name = "relibmss"
version = "0.16.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/MssReliab/relibmss"
homepage = "https://github.com/MssReliab/relibmss"
documentation = "https://github.com/MssReliab/relibmss"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py311"] }
bss = { version = "0.9", package = "relib-bss" }
mss = { version = "0.9", package = "relib-mss" }
