[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "relibmss"
version = "0.14.0"
authors = [{ name = "Hiroyuki Okamura", email = "okamu@hiroshima-u.ac.jp" }]
description = "A Python package for binary/multi state systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/MssReliab/relibmss"
Repository = "https://github.com/MssReliab/relibmss"
Changelog = "https://github.com/MssReliab/relibmss/blob/main/CHANGELOG.md"
Issues = "https://github.com/MssReliab/relibmss/issues"

[tool.maturin]
bindings = "pyo3"
include = [
    "relibmss/**/*"
]
